--- a/.drone.yml
+++ b/.drone.yml
@@ -8,23 +8,10 @@ pipeline:
       - /drone/.sbt
       - /drone/.git
 
-  notify:
-    image: drillster/drone-email
-    host: smtp.mailgun.org
-    username: noreply@drone.geirsson.com
-    password: ${MAILGUN_PASSWORD}
-    from: noreply@drone.geirsson.com
-    recipients:
-      - jorgevc@fastmail.es
-    when:
-      event: push
-      branch: [master]
-      status: [changed, failure]
-
   build:
     image: scalacenter/scala-extras:1.0
     commands:
-      - sbt plugin/test example/compile
+      - sbt "+plugin/test" "+example/compile"
 
   sftp_cache:
     image: plugins/sftp-cache
